--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage" : "https://hemantagarwal707.github.io/movie-app-react",
+
   "name": "my-entertainment",
   "version": "0.1.0",
   "private": true,
@@ -20,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+"deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
